# project_alpha

./: .coverage  .dockerignore  .env.example  .gitignore  1_NN_stock_prediction.ipynb  DATA_SOURCES.md  Dockerfile  FundamentalAnalyzer.ipynb  GrahamValuationCalculator.py  Lorentzian_Classification.ipynb  README.md  Read_me.md  Stock Value Screener 1.ipynb  Stock_Value_Screener_1.ipynb  algorithmic_trading.ipynb  breakout.ipynb  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_india_stock_scanner.sh  run_us_stock_scanner.sh  test_data_sources.py  trial_1.py  trial_2.ipynb  trial_2.py  trial_3.py  trial_5.py  trial_6.py  trial_7.py  trial_8.py  value_stock.py  value_stock_01.ipynb
.github/workflows/: ci.yml  deploy.yml
backup/: Screener_macd.py  Volatile.py
docs/: api_guide.md  architecture_documentation.md  data_providers.md  deployment_guide.md  email_setup.md  file_index.md  implementation_roadmap.md  improvement_suggestions.md  production_readiness_gaps.md  remaining_tasks.md  system_architecture.md  trading_strategy_readme.md  volatility_analysis.md  weakness_mitigations.md
scripts/: migrate_pickle_to_db.py  run_daily_analysis.sh  run_india_stock_scanner.sh  run_us_stock_scanner.sh  run_weekly_backtest.sh
src/: exceptions.py  logging_config.py  project_alpha.code-workspace  project_alpha.py
src/classes/: Add_indicators.py  AlphaVantageFetcher.py  Console.py  DataSourceConfig.py  DataSourceManager.py  DatabaseManager.py  Download.py  Evaluation.py  IndexListFetcher.py  Models.py  Plot_indicators.py  Plot_stocks.py  Plotting.py  Screener.py  Screener_breakout.py  Screener_breakout_old.py  Screener_donchain.py  Screener_ma.py  Screener_one.py  Screener_trendline.py  Screener_value.py  Screener_value_old.py  ScreenipyTA.py  Send_email.py  Tools.py  TwelveDataFetcher.py  Volatile.py
src/classes/_archive/: Plot_stocks.py  Screener_breakout.py  Screener_macd.py  Screener_trendline.py  Screener_value.py
src/classes/analysis/: CorrelationAnalyzer.py  TrendAnalyzer.py  VolatileAnalyzer.py  VolatileConfig.py  __init__.py  regime.py
src/classes/backtesting/: __init__.py  adapter.py  engine.py  performance.py  walk_forward.py
src/classes/data/: DataCache.py  DataFetcher.py  DataTransformer.py  DataValidator.py  __init__.py  news_fetcher.py  provider_chain.py  schemas.py  validators.py
src/classes/filters/: fundamental_filter.py  sentiment_filter.py
src/classes/output/: __init__.py  charts.py  console.py  email.py  exporters.py  formatters.py
src/classes/risk/: __init__.py  risk_manager.py  transaction_costs.py
src/classes/screeners/: __init__.py  base.py  breakout.py  consensus.py  donchian.py  macd.py  moving_average.py  registry.py  trendline.py
src/config/: defaults.yaml  settings.py
tests/: __init__.py  conftest.py  debug_email_structure.py  test_analysis_layer.py  test_charts_email_logic.py  test_data_layer.py  test_email.py  test_email_inline.py  test_output.py  test_screeners.py
tests/fixtures/: sample_data.py
tests/integration/: test_download_module.py  test_pipeline.py
tests/unit/: test_backtesting.py  test_breakout_confirmation.py  test_config.py  test_consensus.py  test_data_repair.py  test_database_manager.py  test_download.py  test_filters.py  test_models.py  test_provider_chain.py  test_regime.py  test_risk_manager.py  test_screeners.py  test_transaction_costs.py  test_walk_forward.py
website/: index.html  scripts.js  styles.css
webui_plugins/: project_alpha_pipeline.py
