[project]
name = "project-alpha"
version = "0.1.0"
description = "Stock market analysis tools"
authors = [
    {name = "Project Alpha Team",email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.1.0,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "ta (>=0.11.0,<1.0.0)",
    "yfinance (>=0.2.63,<0.3.0)",
    "tradingview-ta (>=3.3.0,<4.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "multitasking (>=0.0.11,<0.0.12)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "plotly (>=5.18.0,<7.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "tensorflow-probability (>=0.25.0,<1.0.0)",
    "tf-keras (>=2.20.0,<3.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "joblib (>=1.3.0,<2.0.0)",
    "scipy (>=1.14.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "rich-click (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
