[project]
name = "project-alpha"
version = "0.1.0"
description = "Stock market analysis tools"
authors = [
    {name = "Project Alpha Team",email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core data processing
    "numpy>=2.1.0",
    "pandas>=2.0.0",
    "scipy>=1.14.0",
    
    # Financial data & analysis
    "yfinance>=0.2.63",
    "ta>=0.11.0",
    "tradingview-ta>=3.3.0",
    
    # Machine learning
    "tensorflow>=2.20.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.20.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.3.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "kaleido>=1.2.0",
    
    # CLI & Output
    "click>=8.1.0",
    "rich>=14.0.0",
    "rich-click>=1.8.0",
    
    # Web & networking
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    
    # Utilities
    "multitasking>=0.0.11",
    "reportlab (>=4.4.9,<5.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
